ID-152 Add host select to prevent bleeding

--- a/angular/src/app/discovery/beacon/beacon-search-result-table/beacon-search-result-detail/table-cell-data/table-cell-data.component.scss
+++ b/angular/src/app/discovery/beacon/beacon-search-result-table/beacon-search-result-detail/table-cell-data/table-cell-data.component.scss
@@ -1,10 +1,10 @@
 @import '~ddap-common-lib/styles/modules/colors';
 
 input[disabled],
-::ng-deep .mat-input-element:disabled,
-::ng-deep .mat-form-field-type-mat-native-select.mat-form-field-disabled .mat-form-field-infix::after,
-::ng-deep .dnastack .mat-input-element:disabled,
-::ng-deep .dnastack .mat-form-field-type-mat-native-select.mat-form-field-disabled .mat-form-field-infix::after {
+:host ::ng-deep .mat-input-element:disabled,
+:host ::ng-deep .mat-form-field-type-mat-native-select.mat-form-field-disabled .mat-form-field-infix::after,
+:host ::ng-deep .dnastack .mat-input-element:disabled,
+:host ::ng-deep .dnastack .mat-form-field-type-mat-native-select.mat-form-field-disabled .mat-form-field-infix::after {
   color: black;
   -webkit-text-fill-color: black;
 }
